@@ -19,6 +19,7 @@ devscripts (2.18.1) UNRELEASED; urgency=medium
   [ Osamu Aoki ]
   * uupdate: bash completion fix by Julian Gilbey.  Closes: #834006 
   * uscan: clarify importance of version=4.  Closes: #884880
+  * uscan: add hrefdecode option.  Closes: #884604 
 
  -- Mattia Rizzolo <mattia@debian.org>  Wed, 03 Jan 2018 14:31:54 +0100
 
